src/objects/QPMS__Inspection_Criteria__c.object
<CustomObject>
    <description>This object will store details of inspection criteria and characters.</description>
    <fields>
        <fullName>QPMS__Description__c</fullName>
        <description>This will hold description of attribute used in inspection criteria</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integraion purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup with inspection standard object</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipLabel>Inspection Criterias</relationshipLabel>
        <relationshipName>Inspection_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Instruction__c</fullName>
        <description>This will hold instruction for  attribute used in inspection criteria</description>
        <label>Instruction</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement__c</fullName>
        <description>This field will hold unit of measurement.</description>
        <label>Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <description>This will store the name</description>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Severity__c</fullName>
        <description>This will store severity values.</description>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Tolerance__c</fullName>
        <description>This will hold tolerance value.</description>
        <label>Tolerance (+)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Tolerancee__c</fullName>
        <description>This field will hold tolerance value.</description>
        <label>Tolerance (-)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inspection Criteria</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>